myteo/test/parser/ast/assignment/invalid_pattern_name_error.exp
Error: Left side of assignment must be a pattern
test/parser/ast/assignment/invalid_pattern_name_error.myte:4:3-6
 4 |    A().B.C (A) = 1;
   |    ^^^