myteo/test/parser/ast/assignment/invalid_pattern_name_error.myte
module test

fun main() {
   A().B.C (A) = 1;
}